--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,12 @@
 <!--            <groupId>org.springframework</groupId>-->
 <!--            <artifactId>spring-context</artifactId>-->
 <!--        </dependency>-->
-
+        <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.11.3</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
